--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>web mark demo</title>
-    <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="./dist/styles.css">
     <style>
         body {
             padding: 20px;
@@ -41,7 +41,7 @@
     <footer>
         <hr /><hr /><hr />
     </footer>
-    <script src="./index.js"></script>
+    <script src="./dist/index.js"></script>
     <script>
         window.addEventListener('load', () => {
             window.webmark.init({immediate: true});
